--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -11,8 +11,8 @@
 <p>Click on the chat button.</p>
 <script>
     var botmanWidget = {
-        frameEndpoint: '{{ path("chatframe") }}',
-        chatServer: '{{ path("message") }}',
+        frameEndpoint: '{{ path("chat_frame") }}',
+        chatServer: '{{ path("chat_message") }}',
         introMessage: 'Hello, I am a Chatbot',
         title: 'My Chatbot',
         mainColor: '#f59e08',
