wording and css

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -15,15 +15,15 @@
             <span></span>
             <span></span>
         </div>
-        <div>Symfony Chatbot Demo</div>
+        <div>Symfony Chatbot POC - w/ChatGPT</div>
         <div class="mx-1">
             <div class="emoji">
-                👨🏻‍💻
+                🦸‍♀️
             </div>
         </div>
     </nav>
 </header>
-<main class="main">
+<main class="main" style="display:none;">
     <div class="hero is-primary">
     </div>
 </main>
@@ -31,9 +31,9 @@
     var botmanWidget = {
         frameEndpoint: '{{ path("chat_frame") }}',
         chatServer: '{{ path("chat_message") }}',
-        introMessage: 'Hello, I am a Chatbot',
+        introMessage: 'Hello, I am a chatbot. Ask me anything. I reply with my AI brain. Vous pouvez aussi me parler en français.',
         title: 'My Chatbot',
-        mainColor: '#f59e08',
+        mainColor: '#0089ec',
         color: '#ffffff',
         bubbleBackground: '#e39206',
         aboutText: ''
