--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -32,7 +32,7 @@
         frameEndpoint: '{{ path("chat_frame") }}',
         chatServer: '{{ path("chat_message") }}',
         introMessage: 'Hello, I am a chatbot. Ask me anything. I reply with my AI brain. Vous pouvez aussi me parler en français.',
-        title: 'My Chatbot',
+        title: 'AI-chatbot',
         mainColor: '#0089ec',
         color: '#ffffff',
         bubbleBackground: '#e39206',
