--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="https://vikbert.github.io/pixss/build/styles/pixss.min.css"/>
-    <title>Hello World!</title>
+    <title>AI-chatBot!</title>
 </head>
 <body>
 <header class="header">
