botman widget config

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -36,7 +36,9 @@
         mainColor: '#0089ec',
         color: '#ffffff',
         bubbleBackground: '#e39206',
-        aboutText: ''
+        aboutText: 'Powered by BotMan and OpenAI GPT-3 api by Jessika Kuijer',
+        placeholderText: 'Ask me anything...',
+        aboutLink: 'https://jessicakuijer.com'
     };
 </script>
 <script src='https://cdn.jsdelivr.net/npm/botman-web-widget@0/build/js/widget.js'></script>
