botman widget config

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -36,7 +36,7 @@
         mainColor: '#0089ec',
         color: '#ffffff',
         bubbleBackground: '#e39206',
-        aboutText: 'Powered by BotMan and OpenAI GPT-3 api by Jessika Kuijer',
+        aboutText: 'Powered by BotMan and OpenAI GPT-3 api - Credits: Jessika Kuijer',
         placeholderText: 'Ask me anything...',
         aboutLink: 'https://jessicakuijer.com'
     };
