--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -36,9 +36,11 @@
         mainColor: '#0089ec',
         color: '#ffffff',
         bubbleBackground: '#e39206',
-        aboutText: 'Powered by BotMan and OpenAI GPT-3 api - Credits: Jessika Kuijer',
+        aboutText: 'Powered by BotMan and OpenAI GPT-3 api - Credits: Jessica Kuijer',
         placeholderText: 'Ask me anything...',
-        aboutLink: 'https://jessicakuijer.com'
+        aboutLink: 'https://jessicakuijer.com',
+        bubbleAvatarUrl: '{{ asset('images/ai-avatar.svg') }}',
+        displayMessageTime: true
     };
 </script>
 <script src='https://cdn.jsdelivr.net/npm/botman-web-widget@0/build/js/widget.js'></script>
