--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -56,12 +56,12 @@
 <body>
 <header class="header">
     <nav class="topbar space-between">
-        <div class="burger mx-2">
+        <div class="burger mx-2" style="display:none;">
             <span></span>
             <span></span>
             <span></span>
         </div>
-        <div>Symfony Chatbot POC - w/ChatGPT</div>
+        <div style="margin:auto;">Symfony Chatbot POC - w/ChatGPT</div>
         <div class="mx-1">
             <div class="emoji">
                 🦸‍♀️
@@ -69,8 +69,8 @@
         </div>
     </nav>
 </header>
-<main class="main" style="display:none;">
-    <div class="hero is-primary">
+<main class="main" style="background: url(./images/ai-background.jpg);background-size: contain;background-repeat: no-repeat;background-position: center;">
+    <div class="hero is-primary" style="display:none;">
     </div>
 </main>
 <script>
