--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -11,15 +11,15 @@
     <script type="text/javascript">
         tarteaucitron.init({
     	  "privacyUrl": "", /* Privacy policy url */
-          "bodyPosition": "", /* or top to bring it as first element for accessibility */
+          "bodyPosition": "top", /* or top to bring it as first element for accessibility */
 
     	  "hashtag": "#tarteaucitron", /* Open the panel with this hashtag */
     	  "cookieName": "tarteaucitron", /* Cookie name */
     
-    	  "orientation": "middle", /* Banner position (top - bottom) */
+    	  "orientation": "top", /* Banner position (top - bottom) */
        
           "groupServices": false, /* Group services by category */
-          "serviceDefaultState": "true", /* Default state (true - wait - false) */
+          "serviceDefaultState": "wait", /* Default state (true - wait - false) */
                            
     	  "showAlertSmall": false, /* Show the small banner on bottom right */
     	  "cookieslist": true, /* Show the cookie list */
