--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -28,7 +28,7 @@
 
           "showIcon": true, /* Show cookie icon to manage cookies */
           //"iconSrc": "", /* Optionnal: URL or base64 encoded image */
-          "iconPosition": "BottomLeft", /* BottomRight, BottomLeft, TopRight and TopLeft */
+          "iconPosition": "TopLeft", /* BottomRight, BottomLeft, TopRight and TopLeft */
 
     	  "adblocker": false, /* Show a Warning if an adblocker is detected */
                            
