style main page responsive

--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,16 +1,19 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container vh-100 background-gif" style="background-image:url(./images/gif-ai-chatbot.gif);background-size: contain;background-repeat: no-repeat;background-position: center;" >
-    <div class="d-flex flex-column align-items-center justify-content-center vh-100">
-        <h1 class="text-center bg-info border border-primary">
-            Welcome to AI-Chatbot Symfony project ! <br />
-            Click on button to enter !
-        </h1>
-        <button class="btn btn-primary btn-lg">
-            <a href="/login" class="text-white">
-                Enter
-            </a>
+<div class="container-fluid vh-100 background-gif" style="background-image:url(./images/gif-ai-chatbot.gif);background-size: contain;background-repeat: no-repeat;background-position: center;" >
+    <div class="row h-100 align-items-center justify-content-center">
+        <div class="col-sm-10 col-md-8 col-lg-6 text-center">
+            <h1 class="text-center bg-info border border-primary">
+                Welcome to AI-Chatbot Symfony project ! <br />
+                Click on button to enter !
+            </h1>
+            <button class="btn btn-primary btn-lg">
+                <a href="/login" class="text-white">
+                    Enter
+                </a>
+            </button>
+        </div>
     </div>
 </div>
 {% endblock %}
