--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -1,19 +1,41 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-<div class="container-fluid vh-100 background-gif" style="background-image:url(./images/gif-ai-chatbot.gif);background-size: contain;background-repeat: no-repeat;background-position: center;" >
-    <div class="row h-100 align-items-center justify-content-center">
-        <div class="col-sm-10 col-md-8 col-lg-6 text-center">
-            <h1 class="text-center bg-info border border-primary">
-                Welcome to AI-Chatbot Symfony project ! <br />
-                Click on button to enter !
-            </h1>
-            <button class="btn btn-primary btn-lg">
-                <a href="/login" class="text-white">
-                    Enter
-                </a>
-            </button>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <div class="container-fluid mt-4">
+        <div class="container my-auto">
+            <div class="row align-items-center justify-content-center">
+                <div class="col-12 col-md-8 col-lg-6 text-center">
+                    <h1 class="text-center bg-info border border-primary py-3">
+                        Welcome to AI-Chatbot Symfony project ! <br />
+                        Click on button to enter !
+                    </h1>
+                    <button class="btn btn-primary btn-lg btn-block">
+                        <a href="/login" class="text-white">
+                            Enter
+                        </a>
+                    </button>
+                </div>
+                <div class="col-12 col-md-8 col-lg-6 text-center">
+                    <img src="{{ asset('images/gif-ai-chatbot.gif') }}" alt="AI-Chatbot" class="img-fluid">
+                </div>
         </div>
     </div>
-</div>
+
+    <style>
+        /* Styles for iPhone 12 */
+        @media only screen and (max-width: 390px) {
+            .background-cover {
+                background-size: cover;
+            }
+            h1 {
+                font-size: 1.5rem;
+                margin-bottom: 1rem;
+            }
+            button {
+                font-size: 1rem;
+                padding: 0.5rem 1rem;
+            }
+        }
+    </style>
 {% endblock %}
