--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -62,6 +62,11 @@
             <span></span>
         </div>
         <div style="margin:auto;">Symfony Chatbot POC - w/ChatGPT</div>
+        <ul class="nav">
+            <li class="nav-item">
+                <a class="nav-link" href="/logout">Log Out</a>
+            </li>
+        </ul>
         <div class="mx-1">
             <div class="emoji">
                 🦸‍♀️
