translations fr - en for templates

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -64,7 +64,7 @@
         <div style="margin:auto;">Symfony Chatbot POC - w/ChatGPT</div>
         <ul class="nav">
             <li class="nav-item">
-                <a class="nav-link" href="/logout">Log Out</a>
+                <a class="nav-link" href="/logout">{{'navigation.logout'|trans}}</a>
             </li>
         </ul>
         <div class="mx-1">
