--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -7,9 +7,9 @@
             <div class="col-sm-12 col-md-10 col-lg-8 mx-auto">
 
                 <div class="text-center mt-4">
-                    <h1 class="h2">Bienvenue !</h1>
+                    <h1 class="h2">{{'login.welcome'|trans}}</h1>
                     <p class="lead">
-                        Connectez-vous à votre compte pour continuer
+                        {{'login.intro'|trans}}
                     </p>
                 </div>
 
@@ -23,21 +23,21 @@
                             {# <img src="{{ asset('build/images/skull.png') }}" alt="Charles Hall" class="img-fluid w-25"> #}
                             <form action="{{ path('app_admin_security_login') }}" method="POST">
                                 <div class="form-group mb-3">
-                                    <label for="username" class="form-label">Adresse email</label>
+                                    <label for="username" class="form-label">{{'login.email'|trans}}</label>
                                     <input class="form-control" type="email" id="username" name="_username" value="{{ last_username }}" placeholder="foo@bar.com" required>
                                 </div>
                                 <div class="form-group mb-3">
-                                    <label for="password" class="form-label">Mot de passe</label>
+                                    <label for="password" class="form-label">{{'login.password'|trans}}</label>
                                     <input class="form-control" type="password" id="password" name="_password" placeholder="********" required>
                                 </div>
                                 <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                                 {#  <p>
                                     <a href="{{ path('app_admin_security_resetpasswordrequest') }}">Mot de passe oublié ?</a>
                                 </p> #}
-                                <button class="btn btn-lg btn-primary btn-block" type="submit">Se connecter</button>
+                                <button class="btn btn-lg btn-primary btn-block" type="submit">{{'button.login'|trans}}</button>
                                 <button class="btn btn-success btn-lg btn-block">
                                     <a href="https://www.linkedin.com/in/jessicakuijer" class="text-white" target="_blank">
-                                    Demande d'accès
+                                    {{'button.request_access'|trans}}
                                     </a>
                                 </button>
                             </form>
