--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -24,7 +24,7 @@
                         </a>
                     </button>
                 </div>
-                <div class="col-12 col-md-8 col-lg-6 text-center">
+                <div class="col-12 col-md-8 col-lg-6 text-center mt-4">
                     <img src="{{ asset('images/gif-ai-chatbot.gif') }}" alt="AI-Chatbot" class="img-fluid">
                 </div>
         </div>
