new background midjourney picture

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -74,7 +74,7 @@
         </div>
     </nav>
 </header>
-<main class="main" style="background: url(./images/ai-background.jpg);background-size: contain;background-repeat: no-repeat;background-position: center;">
+<main class="main" style="background: url(./images/ai-background.png);background-size: contain;background-repeat: no-repeat;background-position: center;">
     <div class="hero is-primary" style="display:none;">
     </div>
 </main>
