--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -87,7 +87,7 @@
         mainColor: '#0089ec',
         color: '#ffffff',
         bubbleBackground: '#e39206',
-        aboutText: 'Powered by BotMan and OpenAI GPT-4 api - Credits: Jessica Kuijer',
+        aboutText: 'Powered by BotMan and OpenAI GPT-4-turbo model - Credits: Jessica Kuijer',
         placeholderText: 'Ask me anything...',
         aboutLink: 'https://jessicakuijer.com',
         bubbleAvatarUrl: '{{ asset('images/ai-avatar.svg') }}',
