🚀 RELEASE: GPT-4-TURBO model

--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -61,7 +61,7 @@
             <span></span>
             <span></span>
         </div>
-        <div style="margin:auto;">Symfony Chatbot POC - w/ChatGPT-4</div>
+        <div style="margin:auto;">Symfony Chatbot POC - w/ChatGPT-4-turbo model</div>
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="/logout">{{'navigation.logout'|trans}}</a>
