--- a/templates/chat/index.html.twig
+++ b/templates/chat/index.html.twig
@@ -61,7 +61,7 @@
             <span></span>
             <span></span>
         </div>
-        <div style="margin:auto;">Symfony Chatbot POC - w/ChatGPT-4-turbo model</div>
+        <div style="margin:auto;">Symfony Chatbot POC - w/ChatGPT-4o model</div>
         <ul class="nav">
             <li class="nav-item">
                 <a class="nav-link" href="/logout">{{'navigation.logout'|trans}}</a>
@@ -87,7 +87,7 @@
         mainColor: '#0089ec',
         color: '#ffffff',
         bubbleBackground: '#e39206',
-        aboutText: 'Powered by BotMan and OpenAI GPT-4-turbo model - Credits: Jessica Kuijer',
+        aboutText: 'Powered by BotMan and OpenAI GPT-4o model - Credits: Jessica Kuijer',
         placeholderText: 'Ask me anything...',
         aboutLink: 'https://jessicakuijer.com',
         bubbleAvatarUrl: '{{ asset('images/ai-avatar.svg') }}',
